# marker-fixer

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.sh
.github/workflows/: ci-build.yml  release-manual.yml  release.yml
scripts/ci/: evaluate_changes.sh
scripts/release/: bump_version.sh
src/: app.rs  error.rs  ffprobe.rs  main.rs  mp4.rs  tools.rs  xmp.rs
tests/: integration_cli.rs
