[package]
name = "marker-fixer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
ureq = { version = "2.10", default-features = true }
uuid = { version = "1.11", features = ["v4"] }
